endpoint/npm-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: npm-registry
spec:
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
