endpoint/npm-registry.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: npm-registry
subsets:
  - addresses:
    - ip: 172.31.65.135
    ports:
    - port: 8081
      protocol: TCP
